tests/NormalTests/paczka2/big_fuzzy/11171420.err
Error in line 4: ju8B3bT S523 63,5
Error in line 3: e6TPeySPk A428 24,2
Error in line 9: e6TPeySPk A770 84,1
Error in line 12: S523 S589 65,0
Error in line 6: OS16nhJ5h3 S589 46,9
Error in line 39: NpAl A428 39,1
Error in line 46: OS16nhJ5h3 A428 53,5
Error in line 50: FML S589 88,6
Error in line 64: FML S589 4,9
Error in line 77: 86gLzAJ2C A428 18,8
Error in line 75: ju8B3bT A428 95,0
Error in line 52: e6TPeySPk S523 200,4
Error in line 85: 86gLzAJ2C S589 41,5
Error in line 94: e6TPeySPk A428 25,7
Error in line 100: NpAl A428 97,2
Error in line 106: ju8B3bT A770 11,2
Error in line 123: FML S523 143,64
Error in line 116: S523 S523 56,4
Error in line 127: NpAl S523 1,0
Error in line 141: S523 S523 19,1
Error in line 137: FML S523 84,1
Error in line 142: S523 A428 42,5
Error in line 144: OS16nhJ5h3 S589 42,2
Error in line 150: S523 S589 63,9
Error in line 156: S523 A428 76,7
Error in line 151: OS16nhJ5h3 A770 0,3
Error in line 171: FML A428 66,7
Error in line 188: FML S523 91,2
Error in line 202: FML S589 93,4
Error in line 190: S523 S589 100,0
Error in line 204: FML A770 31,4
Error in line 207: e6TPeySPk A770 34,9
Error in line 205: S523 A770 86,1
Error in line 208: e6TPeySPk A428 82,5
Error in line 213: e6TPeySPk S589 14,6
Error in line 222: e6TPeySPk A770 64,2
Error in line 237: ju8B3bT A428 49,2
Error in line 234: NpAl A770 46,1
